feat: Actualizar configuración de CORS, mejorar documentación de Swagger y agregar nuevas rutas para usuarios
