# src/config/swagger/swagger-output.json
@@ -5,7 +5,7 @@
     "title": "c25257-back-end-node-js",
     "description": "Documentacion de apis para c25257-back-end-node-js."
   },
-  "host": "localhost:8081",
+  "host": "localhost:8084",
   "basePath": "/api",
   "schemes": [
     "http"
@@ -105,19 +105,6 @@
         ],
         "summary": "Obtiene todos los usuarios",
         "description": "Obtiene una lista de todos los usuarios registrados en el sistema.",
-        "parameters": [
-          {
-            "name": "scope",
-            "in": "query",
-            "description": "Scope para ver diferentes vistas del usuario",
-            "required": false,
-            "type": "string",
-            "enum": [
-              "defaultScope",
-              "configScope"
-            ]
-          }
-        ],
         "responses": {
           "default": {
             "description": ""
@@ -144,17 +131,116 @@
             "required": true,
             "type": "string",
             "description": "ID del usuario a obtener"
-          },
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
           {
-            "name": "scope",
-            "in": "query",
-            "description": "Scope para ver diferentes vistas del usuario",
-            "required": false,
+            "bearerAuth": []
+          }
+        ]
+      },
+      "delete": {
+        "tags": [
+          "Usuarios"
+        ],
+        "summary": "Borrar un usuario por ID",
+        "description": "Borrar un usuario específico por su ID.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
             "type": "string",
-            "enum": [
-              "defaultScope",
-              "configScope"
-            ]
+            "description": "ID del usuario a borrar"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/usuarios/nuevo": {
+      "post": {
+        "tags": [
+          "Usuarios"
+        ],
+        "summary": "Crear un nuevo usuario",
+        "description": "Crea un nuevo usuario en el sistema.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Datos del nuevo usuario.",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nombre": {
+                  "type": "string",
+                  "example": "Juan"
+                },
+                "apellido": {
+                  "type": "string",
+                  "example": "Pérez"
+                },
+                "username": {
+                  "type": "string",
+                  "example": "juanperez"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "contraseñaSegura123"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "juan.perez@example.com"
+                },
+                "dni": {
+                  "type": "string",
+                  "example": "12345678"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/usuarios/restaurar/{id}": {
+      "put": {
+        "tags": [
+          "Usuarios"
+        ],
+        "summary": "Restaurar un usuario por ID",
+        "description": "Restaurar un usuario específico por su ID.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID del usuario a restaurar"
           }
         ],
         "responses": {
